fix spacing

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1150,9 +1150,9 @@ a {
 
 .blog {
   padding-top: 70px;
-  padding-left: 70px;
+  padding-left: 41px;
   padding-bottom: 70px;
-  padding-right: 85px;
+  padding-right: 41px;
 }
 @media only screen and (max-width: 600px) {
   .blog {
